--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link rel="stylesheet" href="//at.alicdn.com/t/font_2048087_9n4dype7bmr.css">
+		<link rel="stylesheet" href="./css/reset.css">
 	</head>
 	<body>
 		<div id="app"></div>
