--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
      <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-		<title><%= htmlWebpackPlugin.options.title %></title>
-		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-		<link rel="stylesheet" href="//at.alicdn.com/t/font_2048087_1a2gkcwaocw.css">
+		<title>hello vue</title>
 		<link rel="stylesheet" href="./css/reset.css">
-		
+		<link rel="stylesheet" href="//at.alicdn.com/t/font_2048087_1a2gkcwaocw.css">
+		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<!-- <script src="https://unpkg.com/mint-ui/lib/index.js"></script> -->
+		<link rel="stylesheet" href="https://unpkg.com/mint-ui/lib/style.css">
 	</head>
 	<body>
 		<div id="app"></div>
